# chats.py

./: .env.example  .gitignore  LICENSE  README.md  client.py  gateway.py  pyproject.toml
examples/: addBot.py  remindBot.py
slash/: command.py  context.py  option.py  registry.py
src/chats.py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/chats_py/: __init__.py  client.py  gateway.py
src/chats_py/slash/: __init__.py  command.py  context.py  option.py  registry.py
src/chats_py/util/: logger.py
util/: logger.py
